# ldn-lulc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  Test_Loading_Many.ipynb  environment.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ldn-lint-build-test-push.yml
ldn/: __init__.py  classify.py  cli.py  cli_classify.py  cli_grid.py  cli_train_predict.py  geomad.py  grids.py  random_sampling.py  sids_all_tiles.geojson  sids_ci_tiles.geojson  sids_countries.geojson  sids_dep_tiles.geojson  sids_non_pacific_tiles.geojson  sids_pacific_tiles.geojson  sids_tiles.geojson  tasks.json  train_predict.py  typology.py  typology_mapping.yaml  utils.py
ldn/tests/: conftest.py  test_geomad.py  test_grid.py  test_mosaic.py  test_predict.py
notebooks/: Compare_LULC.ipynb  Compare_LULC_per_class.ipynb  DEAfrica_Filter_training_data_GEE_replicate.ipynb  DEP_Grid_GeoMAD_Testing.ipynb  GeoMAD_Testing.ipynb  GeoMAD_Testing_antimeridian.ipynb  Grid_Testing.ipynb  Rwanda_0_Generate_Training_Points.ipynb  Singapore_0_Generate_Training_Points.ipynb  Test_LoadLULC_MSPC.ipynb  Test_LoadOne.ipynb  Test_Loading_Many.ipynb  Training_data.ipynb  Training_data_creation.ipynb  Write_Geoparquet.ipynb  country_maps.ipynb  random_sampling.py  sids_countries.geojson  singapore_bbox_polygon.geojson  training_samples.geojson  viti_levu_bbox_polygon.geojson
notebooks/maps/: country_region_maps.ipynb
notebooks/src/: Compare_LULC_func.py  spatial.py
notebooks/training_data/: 0_Generate_Training_Points.ipynb  0a_QA_Training_Points.ipynb  1_Train_Predict.ipynb  1_Train_and_Predict.ipynb  Generate_Training_Points_Train_Predict.ipynb  Singapore_0_Generate_Training_Points.ipynb  Training_data_creation.ipynb  random_sampling.py  training_data.geojson  training_data_geomad_dem.geojson  training_data_with_geomad.geojson  training_data_with_geomad_and_dem.geojson
src/: Compare_LULC_func.py  spatial.py
templates/: ls-geomad-annual-0-1-0.yaml
typology/: typology.md
visualisation/: Dockerfile  app.py  deploy.sh  make_mosaic_json.ipynb  titiler_lambda.md
visualisation/infra/: main.tf  outputs.tf  variables.tf
visualisation/static/: index.html
