[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldn"
version = "0.1.0"
description = "Land Degradation Neutrality Land Use/Land Cover tools"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Leith", email = "alex@auspatious.com" },
    { name = "Fang Yuan", email = "contact@fangyuan.space" },
    { name = "Will Jones", email = "will@auspatious.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0"
]

[project.scripts]
ldn = "ldn.cli:app"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.setuptools.packages.find]
where = ["."]
