[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldn"
version = "0.1.0"
description = "Land Degradation Neutrality Land Use/Land Cover tools"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Leith", email = "alex@auspatious.com" },
    { name = "Fang Yuan", email = "contact@fangyuan.space" },
    { name = "Will Jones", email = "will@auspatious.com" },
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "typer>=0.9.0",
    "odc-geo (>=0.5.0,<0.6.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "antimeridian (<0.4.5)",
    "boto3 (>=1.42.31,<2.0.0)",
    "datacube-compute @ git+https://github.com/auspatious/datacube-compute.git",
    "dep-tools @ git+https://github.com/digitalearthpacific/dep-tools.git",
    "odc-stac (>=0.5.2,<0.6.0)",
    "rasterio>=1.4.3",
    "xarray (>=2025.12.0,<2026.0.0)",
    "rustac (>=0.9.6,<0.10.0)",
    "obstore (>=0.9.0,<0.10.0)",
]

[project.scripts]
ldn = "ldn.cli:app"

[tool.setuptools.package-data]
ldn = ["typology_mapping.yaml"]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "datacube (>=1.9.14)",
    "duckdb (>=1.4.4,<2.0.0)"
]

[tool.setuptools.packages.find]
where = ["."]
