[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ldn"
version = "0.1.0"
description = "Land Degradation Neutrality Land Use/Land Cover tools"
license = "LICENSE"
authors = [
    "Alex Leith <alex@auspatious.com>",
    "Fang Yuan <contact@fangyuan.space>",
    "Will Jones <will@auspatious.com>",
]
readme = "README.md"
packages = [{ include = "ldn" }]
include = ["ldn/typology_mapping.yaml"]

[tool.poetry.scripts]
ldn = "ldn.cli:app"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
antimeridian = "<0.4.5"
datacube-compute = { git = "https://github.com/auspatious/datacube-compute.git" }
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git" }
gdal = "3.12.2"
geopandas = ">=1.1.2,<2.0.0"
obstore = ">=0.9.0,<0.10.0"
odc-geo = ">=0.5.0,<0.6.0"
odc-stac = ">=0.5.2,<0.6.0"
pandas = ">=2.3.3,<3.0.0"
rasterio = ">=1.4.3"
rustac = ">=0.9.6,<0.10.0"
typer = ">=0.9.0"
xarray = ">=2025.12.0,<2026.0.0"
zarr = ">=3.1.5,<4.0.0"
boto3 = ">=1.42.31,<2.0.0"
cogeo-mosaic = ">=9.1.0,<10.0.0"
dask = {extras = ["distributed"], version = "^2026.3.0"}
prometheus-client = "^0.24.1"

[tool.poetry.group.visualisation.dependencies]
boto3 = ">=1.42.31,<2.0.0"
cogeo-mosaic = ">=9.1.0,<10.0.0"
fastapi = ">=0.135.2,<0.136.0"
mangum = ">=0.21.0,<0.22.0"
titiler-core = ">=2.0.0,<3.0.0"
titiler-extensions = ">=2.0.0,<3.0.0"
titiler-mosaic = ">=2.0.0,<3.0.0"
uvicorn = ">=0.42.0,<0.43.0"
rio-tiler = "^9.0.4"

[tool.poetry.group.dev.dependencies]
contextily = ">=1.7.0,<2.0.0"
datacube = ">=1.9.14"
duckdb = ">=1.4.4,<2.0.0"
folium = ">=0.20.0,<0.21.0"
ipykernel = ">=7.1.0,<8.0.0"
ipyleaflet = ">=0.20.0,<0.21.0"
mapclassify = ">=2.10.0,<3.0.0"
matplotlib = ">=3.10.8,<4.0.0"
matplotlib-scalebar = ">=0.9.0,<0.10.0"
pytest = ">=9.0.2,<10.0.0"
